<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map"
            android:title="@string/nav_drawer_map" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/person"
            android:title="@string/nav_drawer_login" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/box"
            android:title="@string/nav_drawer_register" />
        <item
            android:id="@+id/nav_listings"
            android:icon="@drawable/list"
            android:title="@string/nav_drawer_list" />
        <item
            android:id="@+id/nav_create_listing"
            android:icon="@drawable/create_listing"
            android:title="@string/nav_drawer_create_listing" />
        <item
            android:id="@+id/nav_create_request"
            android:icon="@drawable/request_listing"
            android:title="@string/nav_drawer_request_listing" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/contact"
                android:title="@string/nav_drawer_contact_us" />
        </menu>
    </item>

</menu>
